--- a/sass/_customStyles.scss
+++ b/sass/_customStyles.scss
@@ -56,6 +56,7 @@
   @media only screen and (max-device-width: 1024px) {
       .parallax {
           background-attachment: scroll;
+          background-size: cover;
       }
   }
   .parallax {
