--- a/css/app.css
+++ b/css/app.css
@@ -8179,8 +8179,7 @@ h1 {
 
 @media only screen and (max-device-width: 1024px) {
   .parallax {
-    background-attachment: scroll;
-    background-size: cover; } }
+    background-attachment: scroll; } }
 .parallax {
   height: 100%;
   background-attachment: fixed;
