--- a/css/app.css
+++ b/css/app.css
@@ -8186,6 +8186,9 @@ h1 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   text-align: center; }
 
 .navbar {
