--- a/sass/_customStyles.scss
+++ b/sass/_customStyles.scss
@@ -54,9 +54,9 @@
   //
   /// Parallax Effect
   @media only screen and (max-device-width: 1024px) {
-      .parallax {
-          background-attachment: scroll;
-      }
+    .parallax {
+        background-attachment: scroll;
+    }
   }
   .parallax {
     height: 100%;
@@ -64,6 +64,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     text-align: center;
   }
 //
