--- a/css/app.css
+++ b/css/app.css
@@ -8204,7 +8204,8 @@ h1 {
   height: 50px; }
 
 body, html {
-  height: 100%; }
+  height: 100%;
+  height: 100vh; }
 
 .parallax .hero-scroll-arrow {
   color: white;
