--- a/css/app.css
+++ b/css/app.css
@@ -8231,6 +8231,15 @@ h1 {
 a.no-underline {
   text-decoration: none; }
 
+.title-underline::after {
+  display: block;
+  content: "";
+  height: 1px;
+  width: 120px;
+  margin: 15px auto 20px;
+  position: relative;
+  background-color: #bcccbf; }
+
 footer {
   padding-top: 30px;
   padding-bottom: 60px; }
